--- a/blogs.html
+++ b/blogs.html
@@ -57,8 +57,6 @@
       
       
       .back {
-	  position: fixed;
-	  bottom: 0;
 	  background:  #FFA1A7;
 	  
       }
@@ -81,7 +79,7 @@
 	<div class="page">
 	  <h1 class="date"><b> 2-May-2023: BYOD No More </h1></b>
 
-	    <p> It is ureasonable to get rid of the BYOD network. Without that network kids will just move to the guest wifi and overcrowd it. The wifi is already very slow and that will only get worse if everyone has to switch to one network. The chrome books that the school provides with us barely work and take a very long time to load. It is much more functional and helpful to use my own device. Requiring us to move over also feels like an invasion of privacy. </p> 
+	    <p> It is ureasonable to get rid of the BYOD network. Without that network kids will just move to the guest wifi and overcrowd it. The wifi is already very slow and that will only get worse if everyone has to switch to one network. The chrome books that the school provides with us barely work and take a very long time to load. The upper classmen get the bad old devices while the lowerclassmen get the new chrome books and elementary school kids get surface pros.The old devices have half the keyboard not working, stains all over the screen, and barely works half the time. It is just easier and much more functional to use my own device. Taking away the BYOD network is meant to keep us safe and prevent us from cheating, but having us use school issued devices doesn&apos;t prevent that. Kids will probably still cheat anyways or find ways around that and the new network will probably have everything blocked anyways. There really is no reason or point to having the BYOD network being taken away there are always ways around it.</p>
 
 	</div>
       </div>
